# api/docs/swagger.json
@@ -416,7 +416,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/reservation.ReservationInsert"
+                            "$ref": "#/definitions/reservation.ReservationDetails"
                         }
                     }
                 ],
@@ -505,7 +505,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/reservation.ReservationDetails"
+                            "$ref": "#/definitions/reservation.ReservationInsert"
                         }
                     }
                 ],
